--- a/styles.css
+++ b/styles.css
@@ -43,18 +43,27 @@ div#footer { height:2em;
 	border-bottom-left-radius: 0.8em;
 	white-space: pre-wrap;
 }
-.small { font-size: 0.6em;}
 
 form { position: relative; width: 100%; }
-form * { display: block; font-size: 0.8em; }
-textarea { width: 80%; height:6em; display: block; font-size: 0.8em;padding:0.2em;font-family: sans-serif;}
+form>* { display: block; font-size: 0.8em; }
+textarea { width: 80%; height:6em; display: block; padding:0.2em;font-family: sans-serif;}
+label:not(:first-of-type) { margin-top: 1em; }
+input[type='email'], input[type='password'] { padding: 0 0.2em; width:80%; }
+button { padding: 0.3em; font-size: 1em; margin-top:1em;}
 
+.small { font-size: 0.6em; }
+.italics { font-style:italic; }
+
+/*
 label[for='email'] { margin-top: 1em; }
 input[type='email'] { padding: 0 0.2em; width:80%;}
 
 label[for='password'] { margin-top: 1em; font-size:0.6em;}
 input[type='password'] { padding: 0 0.3em; font-size:0.6em; width:80%;}
 input[type='submit'],button { padding: 0.3em; font-size: 1em; margin-top:1em;}
+*/
+
+
 
 @media only screen and (max-width: 760px) {
 	body { font-size: 15pt; }
